--- a/MyTradeMTG/Views/Admin/ViewTPSForAdmin.cshtml
+++ b/MyTradeMTG/Views/Admin/ViewTPSForAdmin.cshtml
@@ -16,7 +16,7 @@
                         <div class="row">
                             @*<div class="col-xl-12 col-md-12 col-sm-12 col-12">*@
                             <div class="col-sm-4">
-                                <h4>View TR2</h4>
+                                <h4>View TPS</h4>
                                 <span class="text-danger">
                                     @TempData["ROIIncome"]
                                 </span>
@@ -49,8 +49,8 @@
                                 <thead>
                                     <tr>
                                         <th>S No.</th>
-                                        <th>TR2</th>
-                                        <th>TR2 Date</th>
+                                        <th>TPS</th>
+                                        <th>TPS Date</th>
                                         <th>Status</th>
                                     </tr>
                                 </thead>
