--- a/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
+++ b/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-    <title>@ViewBag.Title</title>
+    @*<title>@ViewBag.Title</title>*@
+    <title>My Trade Globle</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
