--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -210,14 +210,14 @@
 
                         <ul class="navbar-nav header-right">
                             <li class="nav-item dropdown header-profile">
-                                @if (Session["Gender"] != null)
-                                {
-                                    if (Session["Gender"].ToString() == "F" && Session["Profile"].ToString() != "")
+                                @*@if (Session["Gender"] != null)
+                                {*@
+                                    @if (Session["Profile"].ToString() != "")
                                     {
                                         <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
                                             <img src="@Session["Profile"]" width="20" alt="@Session["FullName"]">
                                             <div class="header-info">
-                                                <span>Hello Mrs. @Session["FullName"]</span>
+                                                <span>Hello  @Session["FullName"]</span>
                                                 <small>(@Session["LoginId"])</small>
                                             </div>
                                         </a>
@@ -228,16 +228,16 @@
                                         <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
                                             <img src="/assets/img/usericon.jpg" width="20" alt="@Session["FullName"]">
                                             <div class="header-info">
-                                                <span>Hello Mr. @Session["FullName"]</span>
+                                                <span>Hello  @Session["FullName"]</span>
                                                 <small>(@Session["LoginId"])</small>
                                             </div>
                                         </a>
                                     }
-                                }
+                                    @*//}*@
                                 <div class="dropdown-menu dropdown-menu-right">
                                     <a href="/User/ViewProfile" class="dropdown-item ai-icon">
                                         <i class="flaticon-381-user-7 text-success"></i>
-                                        <span class="ms-2">Profile </span>
+                                        <span class="ms-2">View Profile </span>
                                     </a>
                                     <a href="/User/BankDetailsUpdate" class="dropdown-item ai-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="text-success" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
@@ -303,10 +303,10 @@
                                 {
                                     if (Convert.ToBoolean(Session["IdActivated"]) == true)
                                     {*@
-                            <li><a href="/Wallet/AddWallet">Wallet Request</a></li>
-                            <li><a href="/Wallet/WalletList">Wallet Request List</a></li>
-                            <li><a href="/Wallet/WalletLedgerList">Wallet Ledger</a></li>
-                            <li><a href="/User/WalletTransfer">Direct Transfer</a></li>
+                            <li><a href="/Wallet/AddWallet">Buy MTG Request</a></li>
+                            <li><a href="/Wallet/WalletList">Buy MTG Request List</a></li>
+                            <li><a href="/Wallet/WalletLedgerList">MTG Ledger</a></li>
+                            <li><a href="/User/WalletTransfer">Quick Send MTG</a></li>
 
 
 
@@ -361,7 +361,7 @@
                             @*}
                                 }*@
                             <li><a href="/user/TopUpList"> Topup List </a></li>
-                            <li><a href="/User/PayoutRequest"> Transfer to bank</a></li>
+                            <li><a href="/User/PayoutRequest">Withdraw</a></li>
                             @*}
                                     else
                                     {
