--- a/MyTradeMTG/Views/Wallet/WalletLedgerList.cshtml
+++ b/MyTradeMTG/Views/Wallet/WalletLedgerList.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-lg-12 col-12 layout-spacing">
                     <div class="card">
                         <div class="card-header">
-                            <h4 class="card-title">Wallet Ledger</h4>
+                            <h4 class="card-title">MTG Ledger</h4>
                             <span class="text-danger">
                                 @TempData["Package"]
                             </span>
