--- a/MyTradeMTG/Views/Wallet/WalletList.cshtml
+++ b/MyTradeMTG/Views/Wallet/WalletList.cshtml
@@ -11,7 +11,7 @@
                 <div class="col-lg-12 col-12 layout-spacing">
                     <div class="card">
                         <div class="card-header">
-                            <h4 class="card-title">Wallet List</h4>
+                            <h4 class="card-title">Buy MTG Request List</h4>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
